tests/e2e/not_allowed/unknown.error
Error: syntax error in story at line 1, column 1

1|    unknown = 2
      ^^^^^^^

E0030: `unknown` is reserved for future use
